# proofforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: __init__.py  engine.py  live_engine.py  main.py  models.py
docs/: DEMO_SCRIPT.md  DEVPOST_CHECKLIST.md
scripts/: build_demo_video.py  build_submission_assets.py
static/: app.js  index.html  styles.css
tests/: test_app.py
